# Data-Engineering

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
src/division_1_academic/: requirements.txt
src/division_2_web/: requirements.txt
teams/Conversational_and_Social/: requirements.txt
teams/Web_and_News/: requirements.txt
